[package]
name = "cc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.4.6"
hostname = "0.3.1"
serde_json = "1.0.79"
serde = { version = "1.0.142", features = ["derive"] }